# SDL_Crossplatform_template

./: .gitignore  .gitmodules  CMakeLists.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
src/: main.cpp
src/fonts/: CaskaydiaCoveNerdFont.h  IconsFontAwesome6.h_fa-regular-400.ttf.h  IconsFontAwesome6.h_fa-solid-900.ttf.h
submodules/glad/include/glad/: gl.h
submodules/glad/src/: gl.c
